--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Ambulance App</string>
     <string name="title_activity_maps">MapsActivity</string>
+    <string name="details_of_app">Want instant ambulance service? You are at the right place. We provide you with nearest located Hospital and many other features.</string>
+    <string name="resend_otp"><u> Resend OTP</u></string>
 </resources>
